# ai-sec-rag-lab

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/corpus/hr/: hr-investigations.md  hr-pip-procedure.md  hr-salary-bands.md  hr-severance-schedule.md
data/corpus/public/: hr-benefits-overview.md  hr-expense-policy.md  it-email-slack.md  it-laptop-provisioning.md  it-mfa-enrollment.md  it-vpn-access.md
docs/: threat-model.md
scripts/: chat_repl.py
src/rag/: chat.py  config.py  db.py  embed.py  ingest.py  retrieve.py
